tests/baselines/reference/subtypingWithCallSignatures.errors.txt
subtypingWithCallSignatures.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== subtypingWithCallSignatures.ts (1 errors) ====
    module CallSignature {
           ~~~~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        declare function foo1(cb: (x: number) => void): typeof cb;
        declare function foo1(cb: any): any;
        var r = foo1((x: number) => 1); // ok because base returns void
        var r2 = foo1(<T>(x: T) => ''); // ok because base returns void
    
        declare function foo2(cb: (x: number, y: number) => void): typeof cb;
        declare function foo2(cb: any): any;
        var r3 = foo2((x: number, y: number) => 1); // ok because base returns void
        var r4 = foo2(<T>(x: T) => ''); // ok because base returns void
    }